[project]
name = "ai-automation-agent-hybrid-core"
version = "0.1.0"
description = "Utility API for AI Agents providing Prompt Injection defense, Fuzzy Matching, and Sentiment Analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.126.0",
    "fuzzywuzzy>=0.18.0",
    "instructor>=1.13.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "python-levenshtein>=0.27.3",
    "uvicorn>=0.38.0",
]
