[project]
name = "agent-security-utils"
version = "0.1.0"
description = "Security firewall and utility endpoints for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "instructor>=1.0.0",
    "openai>=1.15.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.23.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "httpx>=0.26.0",
    "pre-commit>=3.6.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py310"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"